Add portfolio template link to footer

--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
 		</div>
 		<footer>
 			<p>Copyright © 2020 Vincent Wong</p>
+			<p>Find this portfolio template <a href="https://github.com/V-Wong/Portfolio">here</a></p>
 		</footer>
 		<script>
 			const toggleDarkTheme = () => {
