Add alt text to images

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 							<a class="demo-link" href="https://linkup.website/">Live Demo</a>
 						</div>
 						<div class="image-container">
-							<img class="image" src="./images/linkup.webp">
+							<img class="image" src="./images/linkup.webp"
+							 alt="Orange and red gear logo">
 						</div>
 						<div class="dotpoints">
 							<ul>
@@ -172,7 +173,8 @@
 							<a class="demo-link" href="https://www.facebook.com/UNSWRubikSoc/">Society Page</a>
 						</div>
 						<div class="image-container">
-							<img class="image" src="./images/rubiksoc.webp">
+							<img class="image" src="./images/rubiksoc.webp" 
+							 alt="Rubik's cube with UNSW logo embedded on the pieces">
 						</div>
 						<div class="dotpoints">
 							<ul>
