Update footer text

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 		</div>
 		<footer>
 			<p>Copyright © 2020 Vincent Wong</p>
-			<p>Find this portfolio template <a href="https://github.com/V-Wong/Portfolio">here</a></p>
+			<p><a href="https://github.com/V-Wong/Portfolio">Use my portfolio as a template</a></p>
 		</footer>
 		<script>
 			const toggleDarkTheme = () => {
