Align tags on two column layout

--- a/index.html
+++ b/index.html
@@ -92,9 +92,11 @@
 								Backend built in Python with Flask-Socketio. Frontend built in Typescript with React.
 							</li>
 						</ul>
-						<span class="tag">Typescript</span>
-						<span class="tag">SocketIO</span>
-						<span class="tag">MongoDB</span>
+						<div class="tags">
+							<span class="tag">Typescript</span>
+							<span class="tag">SocketIO</span>
+							<span class="tag">MongoDB</span>
+						</div>
 					</div>
 
 					<div class="card">
@@ -114,8 +116,10 @@
 								Built in Python with Pygame for visuals and controls.
 							</li>
 						</ul>
-						<span class="tag">Python</span>
-						<span class="tag">Pygame</span>
+						<div class="tags">
+							<span class="tag">Python</span>
+							<span class="tag">Pygame</span>
+						</div>
 					</div>
 
 					<div class="card">
@@ -136,8 +140,10 @@
 								Built in Javascript with the use of HTML5 Canvas for visuals.
 							</li>
 						</ul>
-						<span class="tag">Javascript</span>
-						<span class="tag">Canvas</span>
+						<div class="tags">
+							<span class="tag">Javascript</span>
+							<span class="tag">Canvas</span>
+						</div>
 					</div>
 
 					<div class="card">
@@ -158,8 +164,10 @@
 								Built in Javascript with the use of HTML5 Canvas for visuals.
 							</li>
 						</ul>
-						<span class="tag">Javascript</span>
-						<span class="tag">Canvas</span>
+						<div class="tags">
+							<span class="tag">Javascript</span>
+							<span class="tag">Canvas</span>
+						</div>
 					</div>
 				</section>
 
