Change dark theme colours and button

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 	</head>
 	<body>
 		<div class="container">
-			<button class="dark-theme-button"><img src="./images/sun.svg"></button>
 				<header class="profile">
 					<img class="profile image" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png"
 				     alt="Portrait of Vincent Wong">
@@ -21,6 +20,7 @@
 						<a href="https://drive.google.com/file/d/10xEX7QGZpHkkvXxH7JiHdGAk76DYtOpT/view?usp=sharing">Resume</a>
 						<a href="https://www.linkedin.com/in/vincent-wc-wong/">LinkedIn</a>
 						<a href="mailto:v.wong168@outlook.com">Email</a>
+						<a class="dark-theme-button"><img src="./images/sun.svg">Theme</a>
 					</nav>
 					<blockquote class="about-me card">
 						<h3>About Me</h3>
