Remove email link

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 				     alt="Portrait of Vincent Wong">
 					<h1>Vincent Wong</h1>
 					<nav class="links-container">
-						<a href="https://github.com/V-Wong">Github</a>
-						<a href="https://drive.google.com/file/d/10xEX7QGZpHkkvXxH7JiHdGAk76DYtOpT/view?usp=sharing">Resume</a>
+						<div><a href="https://github.com/V-Wong">Github</a></div>
+						<div><a href="https://drive.google.com/file/d/10xEX7QGZpHkkvXxH7JiHdGAk76DYtOpT/view?usp=sharing">Resume</a></div>
 						<a href="https://www.linkedin.com/in/vincent-wc-wong/">LinkedIn</a>
-						<a href="mailto:v.wong168@outlook.com">Email</a>
 						<a class="dark-theme-button"><img src="./images/sun.svg">Theme</a>
 					</nav>
 					<blockquote class="about-me card">
