Remove card class from about me section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<a href="https://www.linkedin.com/in/vincent-wc-wong/">LinkedIn</a>
 						<a class="dark-theme-button"><img src="./images/moon.svg"><div>Dark</div></a>
 					</nav>
-					<blockquote class="about-me card">
+					<blockquote class="about-me">
 						<h3>About Me</h3>
 						<p>
 							Student of Computer Science and Mathematics at the University of New South Wales in Sydney.
