Add email to footer

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 		</div>
 		<footer>
 			<p>Copyright © 2020 Vincent Wong</p>
-			<p><a href="https://github.com/V-Wong/Portfolio">Use my portfolio as a template</a></p>
+			<p><a href="mailto:v.wong168@outlook.com">Looking for software roles. Email me :)</a></p>
 		</footer>
 		<script>
 			const toggleDarkTheme = () => {
