Update about me section

--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 						</div>
 					</nav>
 					<blockquote class="about-me">
-						<h3>About Me</h3>
 						<p>
-							Student of Computer Science and Mathematics at the University of New South Wales in Sydney.
+							Student of Computer Science and Mathematics at the UNSW in Sydney.
 						</p>
 						<p>
 							Interested in full stack web development and mobile app development.
@@ -45,7 +44,7 @@
 						</p>
 						<p>
 							Also avid speedcuber with <a href="https://www.worldcubeassociation.org/persons/2014wong08?tab=championship-podiums">podiums</a> 
-							in Australian national championships and held a <a href="https://www.worldcubeassociation.org/results/rankings/333oh/average?years=only+2018">former world top 10 ranking.</a>
+							in Australian national championships.
 						</p>
 					</blockquote>
 				</header>
