Fix grammar in about me section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					</nav>
 					<blockquote class="about-me">
 						<p>
-							Student of Computer Science and Mathematics at the UNSW in Sydney.
+							Student of Computer Science and Mathematics at UNSW in Sydney.
 						</p>
 						<p>
 							Interested in full stack web development and mobile app development.
