--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="author" content="Vincent Wong">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
+		<link rel="preload" href="./images/sun.svg" as="image">
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
