Fix card margins

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 					</div>
 				</section>
 
-				<h2 style="margin-top: 3.25vh;">Extracurriculars</h2>
+				<h2 id="extracurriculars">Extracurriculars</h2>
 				<hr>
 				<section class="single-column">
 					<div class="card">
