--- a/index.html
+++ b/index.html
@@ -211,6 +211,50 @@
 						</div>
 					</div>
 				</section>
+
+				<h2 style="margin-top: 2vh;">Algorithmic Interests</h2>
+				<hr>
+				<section class="two-column">
+					<div class="card" style="height: 200px">
+						<h3>COMP3821</h3>
+						<h4 class="project-subheading">Extended Algorithms and Programming Techniques</h4>
+						<a class="repo-link" href="https://github.com/V-Wong/COMP3821">Respository</a>
+						<ul>
+							<li>
+								Implementation of various algorithms in Python with detailed explanations.
+							</li>
+							<li>
+								Includes techniques such as divide and conquer, greedy method, dynamic programming and 
+								linear integer programming.
+							</li>
+						</ul>
+						<div class="tags">
+							<span class="tag">Javascript</span>
+							<span class="tag">Canvas</span>
+						</div>
+					</div>
+
+					<div class="card" style="height: 200px">
+						<h3>LeetCode</h3>
+						<h4 class="project-subheading">Competitive Programming</h4>
+						<a class="demo-link" href="https://leetcode.com/v-wong/">LeetCode Profile</a>
+						<a class="repo-link" href="https://github.com/V-Wong/LeetCode-Practice">Respository</a>
+						<ul>
+							<li>
+								Solutions to various Leetcode problems written in Python with explanations.
+							</li>
+							<li>
+								Solutions designed with efficiency in mind while still maintaining simplicity
+								and readability.
+							</li>
+						</ul>
+						<div class="tags">
+							<span class="tag">Javascript</span>
+							<span class="tag">Canvas</span>
+						</div>
+					</div>
+				</section>
+
 				<div class="modal"></div>
 		</div>
 		<footer>
