Remove manual sizing of half size cards

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 				<h2 style="margin-top: 2vh;">Algorithmic Interests</h2>
 				<hr>
 				<section class="two-column">
-					<div class="card half-height">
+					<div class="card">
 						<h3>COMP3821</h3>
 						<h4 class="project-subheading">Extended Algorithms and Programming Techniques</h4>
 						<a class="repo-link" href="https://github.com/V-Wong/COMP3821">Respository</a>
@@ -234,7 +234,7 @@
 						</div>
 					</div>
 
-					<div class="card half-height">
+					<div class="card">
 						<h3>LeetCode</h3>
 						<h4 class="project-subheading">Competitive Programming</h4>
 						<a class="demo-link" href="https://leetcode.com/v-wong/">LeetCode Profile</a>
