Update project descriptions

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 						<div class="dotpoints">
 							<ul>
 								<li>
-									A centralised source of society events across UNSW.
+									Centralised source of society events across UNSW.
 								</li>
 								<li>
-									Aims to help help students discover new societies, and consequently
-									allows societies to gain exposure.
+									Helps students discover new societies and allows societies
+									to gain exposure.
 								</li>
 							</ul>
 						</div>
@@ -93,13 +93,13 @@
 						 alt="Website with Rubiks cube, chatroom and timer">
 						<ul>
 							<li>
-								Allows users to join lobbies and compete in speedsolving races.
+								Lobbies for users to compete in speedsolving races.
 							</li>
 							<li>
-								Each lobby includes a chatroom for users to discuss their solves in.
+								Includes chatrooms for users to discuss their solves in.
 							</li>
 							<li>
-								Backend built in Python with Flask-Socketio. Frontend built in Typescript with React.
+								Typescript + React frontend. Python + Flask-SocketIO backend.
 							</li>
 						</ul>
 						<div class="tags">
@@ -117,10 +117,10 @@
 						 alt="2D rendering of a Rubiks cube">
 						<ul>
 							<li>
-								Gives users keyboard control of the cube with a 2D rendering of the faces.
+								2D rendering of Rubik's cube with keyboard controls. 
 							</li>
 							<li>
-								Implements the beginner's method of solving the cube.
+								Generates and performs solutions on any state of the cube.
 							</li>
 							<li>
 								Built in Python with Pygame for visuals and controls.
@@ -144,10 +144,10 @@
 								Generates a Huffman tree based on user symbol input.
 							</li>
 							<li>
-								Specific encoding can be selected and traceback of the encoding path drawn.
+								Traceback of encoding path drawn when a symbol is selected.
 							</li>
 							<li>
-								Built in Javascript with the use of HTML5 Canvas for visuals.
+								Built in Javascript with HTML5 Canvas for visuals.
 							</li>
 						</ul>
 						<div class="tags">
@@ -165,13 +165,13 @@
 						 alt="Cartoon tank on grass aiming towards target">
 						<ul>
 							<li>
-								Simulates projectile motion based on controlling the shot of a tank.
+								Simulates projectile motion of a tank shot.
 							</li>
 							<li>
-								A moving target is also featured in which the user can shoot to score points.
+								Allows control of various motion parameters.
 							</li>
 							<li>
-								Built in Javascript with the use of HTML5 Canvas for visuals.
+								Built in Javascript with HTML5 Canvas for visuals.
 							</li>
 						</ul>
 						<div class="tags">
@@ -197,11 +197,10 @@
 						<div class="dotpoints">
 							<ul>
 								<li>
-									Help organise Rubik's Cube speedsolving tutorials and unofficial competitions at UNSW.
+									Help organise Rubik's Cube tutorials and unofficial competitions at UNSW.
 								</li>
 								<li>
-									Encourage existing cubers to develop their skills while helping new cubers find a new interest
-									and hobby in speedsolving.
+									Encourage students to find an interest and hobby in speedsolving.
 								</li>
 							</ul>
 						</div>
@@ -221,16 +220,15 @@
 						<a class="repo-link" href="https://github.com/V-Wong/COMP3821">Respository</a>
 						<ul>
 							<li>
-								Implementation of various algorithms in Python with detailed explanations.
+								Explained implementations of various algorithms in Python.
 							</li>
 							<li>
-								Includes techniques such as divide and conquer, greedy method, dynamic programming and 
-								linear integer programming.
+								Uses techniques like dynamic programming among others.
 							</li>
 						</ul>
 						<div class="tags">
-							<span class="tag">Javascript</span>
-							<span class="tag">Canvas</span>
+							<span class="tag">Python</span>
+							<span class="tag">Programming Techniques</span>
 						</div>
 					</div>
 
@@ -241,16 +239,15 @@
 						<a class="repo-link" href="https://github.com/V-Wong/LeetCode-Practice">Respository</a>
 						<ul>
 							<li>
-								Solutions to various Leetcode problems written in Python with explanations.
+								Explained Python solutions to various problems.
 							</li>
 							<li>
-								Solutions designed with efficiency in mind while still maintaining simplicity
-								and readability.
+								Solutions designed with efficiency while maintaining simplicity.
 							</li>
 						</ul>
 						<div class="tags">
-							<span class="tag">Javascript</span>
-							<span class="tag">Canvas</span>
+							<span class="tag">Python</span>
+							<span class="tag">Problem solving</span>
 						</div>
 					</div>
 				</section>
