Replace Projectile Simulator project with Study Helper

--- a/index.html
+++ b/index.html
@@ -157,26 +157,25 @@
 					</div>
 
 					<div class="card">
-						<h3>Projectile Simulator</h3>
-						<h4 class="project-subheading">Web based projectile simulation tool</h4>
-						<a class="demo-link" href="https://v-wong.github.io/Projectile-Simulator/">Live Demo</a>
-						<a class="repo-link" href="https://github.com/V-Wong/Projectile-Simulator">Respository</a>
-						<img class="image" src="./images/tanks.webp"
-						 alt="Cartoon tank on grass aiming towards target">
+						<h3>Study Helper</h3>
+						<h4 class="project-subheading">Google Docs Flashcard Generation</h4>
+						<a class="repo-link" href="https://github.com/V-Wong/Study-Helper">Respository</a>
+						<img class="image" src="./images/study_helper.webp"
+						 alt="Website with textbox input and table">
 						<ul>
 							<li>
-								Simulates projectile motion of a tank shot.
+								Using Google Docs API to parse documents into learning resources.
 							</li>
 							<li>
-								Allows control of various motion parameters.
+								Includes quizing functionality and statistical tracking.
 							</li>
 							<li>
-								Built in Javascript with HTML5 Canvas for visuals.
+								Javascript + React + Bootstrap frontend. Python + Flask backend.
 							</li>
 						</ul>
 						<div class="tags">
-							<span class="tag">Javascript</span>
-							<span class="tag">Canvas</span>
+							<span class="tag">React</span>
+							<span class="tag">Bootstrap</span>
 						</div>
 					</div>
 				</section>
