Shorten about me section

--- a/index.html
+++ b/index.html
@@ -41,11 +41,8 @@
 							Interested in full stack web development and mobile app development.
 						</p>
 						<p>
-							Experienced in programming with Javascript (Typescript) and Python.
-						</p>
-						<p>
 							Also avid speedcuber with <a href="https://www.worldcubeassociation.org/persons/2014wong08?tab=championship-podiums">podiums</a> 
-							in Australian national championships.
+							in Australian championships.
 						</p>
 					</blockquote>
 				</header>
