--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 					</div>
 
 					<div class="card">
-						<h3>Twist The Web Clone</h3>
+						<h3>Twist The Web Clone (WIP)</h3>
 						<h4 class="project-subheading">Web based social speedsolving website</h4>
 						<a class="demo-link" href="https://ttw-clone.herokuapp.com/">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/TTW-Clone">Repository</a>
@@ -154,7 +154,7 @@
 					</div>
 
 					<div class="card">
-						<h3>Study Helper</h3>
+						<h3>Study Helper (WIP)</h3>
 						<h4 class="project-subheading">Google Docs Flashcard Generation</h4>
 						<a class="repo-link" href="https://github.com/V-Wong/Study-Helper">Respository</a>
 						<img class="image" src="./images/study_helper.webp"
