Update project subheadings

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<div class="card">
 						<div class="description">
 							<h3>LinkUp - UNSW Events Tracker</h3>
-							<h4 class="project-subheading">Frontend developer</h4>
+							<h4 class="project-subheading">Frontend Developer</h4>
 							<a class="demo-link" href="https://linkup.website/">Live Demo</a>
 						</div>
 						<div class="image-container">
@@ -83,7 +83,7 @@
 				<section class="two-column">
 					<div class="card">
 						<h3>CubeSim</h3>
-						<h4 class="project-subheading">Rubiks cube simulation and solving tool</h4>
+						<h4 class="project-subheading">Rubiks Cube Simulation and Solving Program</h4>
 						<a class="repo-link" href="https://github.com/V-Wong/CubeSim">Respository</a>
 						<img class="image" src="./images/cube.webp"
 						 alt="2D rendering of a Rubiks cube">
@@ -106,7 +106,7 @@
 
 					<div class="card">
 						<h3>Huffman Encoding</h3>
-						<h4 class="project-subheading">Huffman Encoding visualisation tool</h4>
+						<h4 class="project-subheading">Huffman Encoding Visualisation Tool</h4>
 						<a class="demo-link" href="https://v-wong.github.io/Huffman-Encoding">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/Huffman-Encoding">Respository</a>
 						<img class="image" src="./images/huffman.webp"
@@ -130,7 +130,7 @@
 
 					<div class="card">
 						<h3>Twist The Web Clone (WIP)</h3>
-						<h4 class="project-subheading">Web based social speedsolving website</h4>
+						<h4 class="project-subheading">Social Speedsolving Website</h4>
 						<a class="demo-link" href="https://ttw-clone.herokuapp.com/">Live Demo</a>
 						<a class="repo-link" href="https://github.com/V-Wong/TTW-Clone">Repository</a>
 						<img class="image" src="./images/ttw.webp"
