Update LinkUp description

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<section class="single-column">
 					<div class="card">
 						<div class="description">
-							<h3>LinkUp - UNSW Events Tracker</h3>
+							<h3>LinkUp - UNSW and USyd Events Tracker</h3>
 							<h4 class="project-subheading">Frontend Developer</h4>
 							<a class="demo-link" href="https://linkup.website/">Live Demo</a>
 						</div>
@@ -63,7 +63,7 @@
 						<div class="dotpoints">
 							<ul>
 								<li>
-									Centralised source of society events across UNSW.
+									Centralised source of society events across UNSW and USyd.
 								</li>
 								<li>
 									Helps students discover new societies and allows societies
