Add more detailed descriptions to collaborative projects and extracurriculars

--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
 									Helps students discover new societies and allows societies
 									to gain exposure.
 								</li>
+								<li>
+									Development team consists of UNSW Computer Science 
+									and Software Engineering students.
+								</li>
+								<li>
+									Currently collborating with and expanding into other universities.
+								</li>
 							</ul>
 						</div>
 						<div class="tags">
@@ -196,7 +203,13 @@
 									Help organise Rubik's Cube tutorials and unofficial competitions at UNSW.
 								</li>
 								<li>
-									Encourage students to find an interest and hobby in speedsolving.
+									Encourage students to find an interest and hobby in speedcubing.
+								</li>
+								<li>
+									Help existing speedcubers to improve and optimise their solves.
+								</li>
+								<li>
+									Currently working with the World Cube Association to organise official competitions.
 								</li>
 							</ul>
 						</div>
