Add links to tags

--- a/index.html
+++ b/index.html
@@ -79,8 +79,12 @@
 							</ul>
 						</div>
 						<div class="tags">
-							<span class="tag">React</span>
-							<span class="tag">Bootstrap</span>
+							<span class="tag">
+								<a href="https://reactjs.org/">React</a>
+							</span>
+							<span class="tag">
+								<a href="https://getbootstrap.com/">Bootstrap</a>
+							</span>
 						</div>
 					</div>
 				</section>
@@ -106,8 +110,12 @@
 							</li>
 						</ul>
 						<div class="tags">
-							<span class="tag">Python</span>
-							<span class="tag">Pygame</span>
+							<span class="tag">
+								<a href="https://www.python.org/">Python</a>
+							</span>
+							<span class="tag">
+								<a href="https://www.pygame.org/news">Pygame</a>
+							</span>
 						</div>
 					</div>
 
@@ -130,8 +138,12 @@
 							</li>
 						</ul>
 						<div class="tags">
-							<span class="tag">Javascript</span>
-							<span class="tag">Canvas</span>
+							<span class="tag">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">Javascript</a>
+							</span>
+							<span class="tag">
+								<a href="https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API">Canvas</a>
+							</span>
 						</div>
 					</div>
 
@@ -154,9 +166,15 @@
 							</li>
 						</ul>
 						<div class="tags">
-							<span class="tag">Typescript</span>
-							<span class="tag">SocketIO</span>
-							<span class="tag">MongoDB</span>
+							<span class="tag">
+								<a href="https://www.typescriptlang.org/">Typescript</a>
+							</span>
+							<span class="tag">
+								<a href="https://socket.io/">SocketIO</a>
+							</span>
+							<span class="tag">
+								<a href="https://www.mongodb.com/">MongoDB</a>
+							</span>
 						</div>
 					</div>
 
@@ -178,8 +196,12 @@
 							</li>
 						</ul>
 						<div class="tags">
-							<span class="tag">React</span>
-							<span class="tag">Bootstrap</span>
+							<span class="tag">
+								<a href="https://reactjs.org/">React</a>
+							</span>
+							<span class="tag">
+								<a href="https://getbootstrap.com/">Bootstrap</a>
+							</span>
 						</div>
 					</div>
 				</section>
@@ -214,8 +236,12 @@
 							</ul>
 						</div>
 						<div class="tags">
-							<span class="tag">Rubiks Cubes</span>
-							<span class="tag">Speedsolving</span>
+							<span class="tag">
+								<a href="https://www.rubiks.com/en-us/">Rubiks Cubes</a>
+							</span>
+							<span class="tag">
+								<a href="https://www.worldcubeassociation.org/">Speedcubing</a>
+							</span>
 						</div>
 					</div>
 				</section>
@@ -236,8 +262,12 @@
 							</li>
 						</ul>
 						<div class="tags">
-							<span class="tag">Python</span>
-							<span class="tag">Programming Techniques</span>
+							<span class="tag">
+								<a href="https://www.python.org/">Python</a>
+							</span>
+							<span class="tag">
+								<a href="https://www.handbook.unsw.edu.au/undergraduate/courses/2020/COMP3821">Programming Techniques</a>
+							</span>
 						</div>
 					</div>
 
@@ -255,8 +285,12 @@
 							</li>
 						</ul>
 						<div class="tags">
-							<span class="tag">Python</span>
-							<span class="tag">Problem solving</span>
+							<span class="tag">
+								<a href="https://www.python.org/">Python</a>
+							</span>
+							<span class="tag">
+								<a href="https://leetcode.com/">Problem Solving</a>
+							</span>
 						</div>
 					</div>
 				</section>
