--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="Description" content="Aspiring full stack web developer based in Sydney, Australia.
 										  Current student of Computer Science and Mathematics at UNSW.">
 		<meta name="author" content="Vincent Wong">
-		<link rel="icon" type="image/png" href="./images/favicon.ico">
+		<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
 		<link rel="preload" href="./images/sun.svg" as="image">
