--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<section class="single-column">
 				<div class="card">
 					<div class="description">
-						<h3>LinkUp - UNSW and USyd Events Tracker</h3>
+						<h3>LinkUp - Australian University Event Tracker</h3>
 						<h4 class="project-subheading">Frontend Developer</h4>
 						<a class="demo-link" href="https://linkup.website/">Live Demo</a>
 					</div>
@@ -64,10 +64,11 @@
 					<div class="dotpoints">
 						<ul>
 							<li>
-								Centralised source of society events across UNSW and USyd.
+								Centralised source of society events across Australian universities
+								such as UNSW, USyd and UniMelb.
 							</li>
 							<li>
-								Helps students discover new societies and allows societies
+								Helps students discover new societies and consequently allows societies
 								to gain exposure.
 							</li>
 							<li>
@@ -75,7 +76,7 @@
 								and Software Engineering students.
 							</li>
 							<li>
-								Currently collborating with and expanding into other universities.
+								Currently collborating with and expanding into other universities across Australia.
 							</li>
 						</ul>
 					</div>
@@ -207,7 +208,7 @@
 				</div>
 			</section>
 
-			<h2 id="extracurriculars">Extracurriculars</h2>
+			<h2 id="extracurriculars">Extracurriculars and Other Activities</h2>
 			<hr>
 			<section class="single-column">
 				<div class="card">
@@ -247,7 +248,7 @@
 				</div>
 			</section>
 
-			<h2 style="margin-top: 2vh;">Algorithmic Interests</h2>
+			<h2 style="margin-top: 2vh;">Algorithmic Interests and Resources</h2>
 			<hr>
 			<section class="two-column">
 				<div class="card">
@@ -256,10 +257,13 @@
 					<a class="repo-link" href="https://github.com/V-Wong/COMP3821">Respository</a>
 					<ul>
 						<li>
-							Explained implementations of various algorithms in Python.
+							Explained implementations of algorithms in Python.
 						</li>
 						<li>
-							Uses techniques like dynamic programming among others.
+							Uses techniques such as dynamic programming.
+						</li>
+						<li>
+							Documents my studies in common algorithms.
 						</li>
 					</ul>
 					<div class="tags">
@@ -282,7 +286,10 @@
 							Explained Python solutions to various problems.
 						</li>
 						<li>
-							Solutions designed with efficiency while maintaining simplicity.
+							Solutions designed with efficiency and simplicity.
+						</li>
+						<li>
+							Documents my training in problem solving.
 						</li>
 					</ul>
 					<div class="tags">
