--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-164616925-1"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-164616925-1');
+		</script>
+	
 		<title>Portfolio | Vincent Wong - Aspiring Web Developer</title>
 		<meta name="Description" content="Aspiring full stack web developer based in Sydney, Australia.
 										  Current student of Computer Science and Mathematics at UNSW.">
