--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 					<h4 class="project-subheading">Huffman Encoding Visualisation Tool</h4>
 					<a class="demo-link" href="https://v-wong.github.io/Huffman-Encoding">Live Demo</a>
 					<a class="repo-link" href="https://github.com/V-Wong/Huffman-Encoding">Respository</a>
-					<img class="image" src="./images/huffman.webp"
+					<img class="image" src="./images/huffman_small.webp"
 						alt="Binary tree formed by Huffman encoding algorithm">
 					<ul>
 						<li>
@@ -164,7 +164,7 @@
 					<h4 class="project-subheading">Social Speedsolving Website</h4>
 					<a class="demo-link" href="https://ttw-clone.herokuapp.com/">Live Demo</a>
 					<a class="repo-link" href="https://github.com/V-Wong/TTW-Clone">Repository</a>
-					<img class="image" src="./images/ttw.webp"
+					<img class="image" src="./images/ttw_small.webp"
 						alt="Website with Rubiks cube, chatroom and timer">
 					<ul>
 						<li>
@@ -194,7 +194,7 @@
 					<h3>Study Helper (WIP)</h3>
 					<h4 class="project-subheading">Google Docs Flashcard Generation</h4>
 					<a class="repo-link" href="https://github.com/V-Wong/Study-Helper">Respository</a>
-					<img class="image" src="./images/study_helper.webp"
+					<img class="image" src="./images/study_helper_small.webp"
 						alt="Website with textbox input and table">
 					<ul>
 						<li>
@@ -228,7 +228,7 @@
 						<a class="demo-link" href="https://www.facebook.com/UNSWRubikSoc/">Society Page</a>
 					</div>
 					<div class="image-container">
-						<img class="image" src="./images/rubiksoc.webp" 
+						<img class="image" src="./images/rubiksoc_small.webp" 
 							alt="Rubik's cube with UNSW logo embedded on the pieces">
 					</div>
 					<div class="dotpoints">
