Vectorize Linkup logo

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<a class="demo-link" href="https://linkup.website/">Live Demo</a>
 					</div>
 					<div class="image-container">
-						<img class="image" src="./images/linkup.webp"
+						<img class="image" src="./images/linkup.svg"
 							alt="Orange and red gear logo">
 					</div>
 					<div class="dotpoints">
