Update meta description

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		-->
 	
 		<title>Portfolio | Vincent Wong - Aspiring Web Developer</title>
-		<meta name="Description" content="Aspiring full stack web developer based in Sydney, Australia.
+		<meta name="Description" content="Aspiring full stack web developer based in Sydney, Australia
+										  with experience in React, Typescript and Python-Flask.
 										  Current student of Computer Science and Mathematics at UNSW.">
 		<meta name="author" content="Vincent Wong">
 		<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
