--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
 				<h2>Aspiring Web Developer</h2>
 				<nav class="links-container">
 					<div class="link-container">
-						<img src="./images/github.svg">
+						<img src="./images/github.svg" alt="Black and white GitHub logo icon">
 						<a href="https://github.com/V-Wong">Github</a>
 					</div>
 					<div class="link-container">
-						<img src="./images/resume.svg">
+						<img src="./images/resume.svg" alt="Black and white icon with silhouette of person">
 						<a href="https://drive.google.com/file/d/10xEX7QGZpHkkvXxH7JiHdGAk76DYtOpT/view?usp=sharing">Resume</a>
 					</div>
 					<div class="link-container">
-						<img src="./images/linkedin.svg">
+						<img src="./images/linkedin.svg" alt="Black and white LinkIn logo icon">
 						<a href="https://www.linkedin.com/in/vincent-wc-wong/">LinkedIn</a>
 					</div>
 					<div id="dark-theme-button" class="link-container">
-						<img src="./images/moon.svg">
+						<img src="./images/moon.svg" alt="Black and white moon icon">
 						<a>Dark</a>
 					</div>
 				</nav>
