--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 				</div>
 			</section>
 
-			<h2 id="extracurriculars">Extracurriculars and Other Activities</h2>
+			<h2 id="extracurriculars">Extracurriculars</h2>
 			<hr>
 			<section class="single-column">
 				<div class="card">
@@ -269,7 +269,67 @@
 				</div>
 			</section>
 
-			<h2 style="margin-top: 2vh;">Algorithmic Interests and Resources</h2>
+			<h2 style="margin-top: 2vh;">Skillset</h2>
+			<hr>
+			<section class="two-column">
+				<div class="card" style="padding-bottom: 3%;">
+					<h3>Web Development Skillset</h3>
+					<h4 class="project-subheading">Frontend</h4>
+					<ul>
+						<li>
+							<u>Languages</u>: Javascript, Typescript, HTML, CSS.
+						</li>
+						<li>
+							<u>Frameworks</u>: React, Bootstrap.
+						</li>
+						<li>
+							<u>Other</u>: HTML5 Canvas. 
+						</li>
+					</ul>
+					<h4 class="project-subheading">Backend</h4>
+					<ul>
+						<li>
+							<u>Languages</u>: Python.
+						</li>
+						<li>
+							<u>Frameworks</u>: Flask, SocketIO.
+						</li>
+						<li>
+							<u>Other</u>: SQL (PL/SQL), MongoDB. 
+						</li>
+					</ul>
+				</div>
+
+				<div class="card" style="padding-bottom: 3%;">
+					<h3>Other Skillset</h3>
+					<h4 class="project-subheading">Languages</h4>
+					<ul>
+						<li>
+							<u>C</u>: learnt as the basis of multiple UNSW courses.
+						</li>
+						<li>
+							<u>Regex</u>: learnt in the UNSW Software Construction course.
+						</li>
+						<li>
+							<u>Perl</u>: learnt in the UNSW Software Construction course.
+						</li>
+					</ul>
+					<h4 class="project-subheading">Project Management Skills</h4>
+					<ul>
+						<li>
+							<u>Git</u>: version control system used for my open source projects.
+						</li>
+						<li>
+							<u>GitHub</u>: hosting service for my open source projects.
+						</li>
+						<li>
+							<u>Jira</u>: agile project management system for my work projects.
+						</li>
+					</ul>
+				</div>
+			</section>
+
+			<h2 style="margin-top: 2vh;">Algorithmic Interests</h2>
 			<hr>
 			<section class="two-column">
 				<div class="card">
