--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 										  with experience in React, Typescript and Python-Flask.
 										  Current student of Computer Science and Mathematics at UNSW.">
 		<meta name="author" content="Vincent Wong">
+		<meta name="keywords" content="vwong, VWong, v-wong, V-Wong">
 		<link rel="icon" type="image/x-icon" href="./images/favicon.ico">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
