Update skillset section

--- a/index.html
+++ b/index.html
@@ -273,58 +273,58 @@
 			<h2 style="margin-top: 2vh;">Skillset</h2>
 			<hr>
 			<section class="two-column">
-				<div class="card" style="padding-bottom: 3%;">
+				<div class="card" style="padding-bottom: 2%;">
 					<h3>Web Development Skillset</h3>
 					<h4 class="project-subheading">Frontend</h4>
-					<ul>
+					<ul style="margin-top: 1vh;">
 						<li>
-							<u>Languages</u>: Javascript, Typescript, HTML, CSS.
+							<b>Languages</b>: Javascript, Typescript, HTML, CSS.
 						</li>
 						<li>
-							<u>Frameworks</u>: React, Bootstrap.
+							<b>Frameworks and Libraries</b>: React, Bootstrap, HTML5 Canvas.
 						</li>
 						<li>
-							<u>Other</u>: HTML5 Canvas. 
+							<b>Other</b>: Accessible + Responsive design, High performance.
 						</li>
 					</ul>
 					<h4 class="project-subheading">Backend</h4>
-					<ul>
+					<ul style="margin-top: 1vh;">
 						<li>
-							<u>Languages</u>: Python.
+							<b>Languages</b>: Python.
 						</li>
 						<li>
-							<u>Frameworks</u>: Flask, SocketIO.
+							<b>Frameworks and Libraries</b>: Flask, SocketIO.
 						</li>
 						<li>
-							<u>Other</u>: SQL (PL/SQL), MongoDB. 
+							<b>Other</b>: SQL (PL/SQL), MongoDB. 
 						</li>
 					</ul>
 				</div>
 
-				<div class="card" style="padding-bottom: 3%;">
+				<div class="card" style="padding-bottom: 2%;">
 					<h3>Other Skillset</h3>
 					<h4 class="project-subheading">Languages</h4>
-					<ul>
+					<ul style="margin-top: 1vh;">
 						<li>
-							<u>C</u>: learnt as the basis of multiple UNSW courses.
+							<b>C</b>: low level resource access for high performance programs.
 						</li>
 						<li>
-							<u>Regex</u>: learnt in the UNSW Software Construction course.
+							<b>Regex</b>: using patterns to effectively operate on string data.
 						</li>
 						<li>
-							<u>Perl</u>: learnt in the UNSW Software Construction course.
+							<b>Perl</b>: integrating Regex with procedural features.
 						</li>
 					</ul>
-					<h4 class="project-subheading">Project Management Skills</h4>
-					<ul>
+					<h4 class="project-subheading">Project Management</h4>
+					<ul style="margin-top: 1vh;">
 						<li>
-							<u>Git</u>: version control system used for my open source projects.
+							<b>Git</b>: version control system for tracking code changes.
 						</li>
 						<li>
-							<u>GitHub</u>: hosting service for my open source projects.
+							<b>GitHub</b>: Git hosting service for organising collaboration.
 						</li>
 						<li>
-							<u>Jira</u>: agile project management system for my work projects.
+							<b>Jira</b>: agile project management system for tracking progress.
 						</li>
 					</ul>
 				</div>
